--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       margin:0px;
       padding:0px;
       overflow:scroll;
+      display: flex;
+      flex-flow: column;
+      align-items: center;
     }
 
     img {    
@@ -42,9 +45,17 @@
       object-fit: cover;
       
     }
+
+    a {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 40px;
+      margin-top: -40px;
+    }
   </style>
 </head>
 <body>
   <img src='letter.png' />
+  <a href="tel:052-305-1070">תקשורת: עומר 052-305-1070</a>
 </body>
 </html>
