--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <!-- Primary Meta Tags -->
   <title>מכתב בוגרי תלפיות</title>
   <meta name="title" content="מכתב בוגרי תלפיות">
-  <meta name="description" content="527 בוגרי תכנית תלפיות קוראים לעצור את המהלכים להחלשת מערכת המשפט והמשטר הדמוקרטי בישראל">
+  <meta name="description" content="529 בוגרי תכנית תלפיות קוראים לעצור את המהלכים להחלשת מערכת המשפט והמשטר הדמוקרטי בישראל">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://t4d.org.il/">
   <meta property="og:title" content="מכתב בוגרי תלפיות">
-  <meta property="og:description" content="527 בוגרי תכנית תלפיות קוראים לעצור את המהלכים להחלשת מערכת המשפט והמשטר הדמוקרטי בישראל">
+  <meta property="og:description" content="529 בוגרי תכנית תלפיות קוראים לעצור את המהלכים להחלשת מערכת המשפט והמשטר הדמוקרטי בישראל">
   <meta property="og:image" content="https://t4d.org.il/social.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://t4d.org.il/">
   <meta property="twitter:title" content="מכתב בוגרי תלפיות">
-  <meta property="twitter:description" content="527 בוגרי תכנית תלפיות קוראים לעצור את המהלכים להחלשת מערכת המשפט והמשטר הדמוקרטי בישראל">
+  <meta property="twitter:description" content="529 בוגרי תכנית תלפיות קוראים לעצור את המהלכים להחלשת מערכת המשפט והמשטר הדמוקרטי בישראל">
   <meta property="twitter:image" content="https://t4d.org.il/social.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -49,8 +49,8 @@
     a {
       font-size: 24px;
       font-weight: bold;
+      margin: 16px;
       margin-bottom: 40px;
-      margin-top: -40px;
     }
   </style>
 </head>
