--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <base href="/">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Primary Meta Tags -->
@@ -52,6 +52,13 @@
       margin: 16px;
       margin-bottom: 40px;
     }
+
+      @media screen and (max-width: 600px) {
+        a {
+          font-size: 18px;
+        }
+      }
+
   </style>
 </head>
 <body>
