--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       font-weight: bold;
       margin: 16px;
       margin-bottom: 40px;
+      text-align: center;
     }
 
       @media screen and (max-width: 600px) {
