--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 
   </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MTM5GW66F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6MTM5GW66F');
+</script>
+
 <body>
   <img src='letter.png' />
   <a href="tel:052-305-1070">תקשורת: עומר 052-305-1070</a>
